v1.x.y unreleased

- New features:
    - A new command has been added: `p_merge`, to merge a project into another.
    - It is now possible to turn a task into a note with `t_to_note` and a note into a task with `n_to_task`.

v1.1.1 2016/11/11

- Improvements:
    - When listing multiple projects, order them alphabetically.
- Bug fixes:
    - Fixed parse error if the user sets a time of "17m".
    - When the user edits a tasks with t_edit and removes a keyword, remove the keyword from the task.
    - Made recurrence code work with dateutil 2.6.0.

v1.1.0 2016/09/03

- New features & Improvements:
    - A new command has been added: `t_medit`. `t_medit` lets you edit all tasks of a project in one go.
    - Aliases can now be modified. The name of the alias can be modified with `a_edit_name` and the command with `a_edit_command`.
    - Database format updates are now easier to run: just run `yokadi -u`, no more separate `update.py` command. Updates are also much faster.
    - Task lists have been improved:
        - Borders look nicer.
        - Some bugs in the rendering of the title column have been fixed (wrong width, badly cropped text).
    - Yokadi now uses standard paths by default: the database is stored in ~/.local/share/yokadi/yokadi.db and non-essential data is in ~/.cache/yokadi/.
    - Reviewed and improved documentation. Moved developer documentation to a separate dir (doc/dev).
- Bug fixes:
    - The code handling recurrences has been made more robust.
    - Recurrences are now stored in a more future proof way.
    - Fixed `bug_edit` crash.
    - Fixed negative keyword filter: A task with two keywords k1 and k2 would not be excluded by a filter !k1.

v1.0.2 2016/03/28

- Use a more portable way to get the terminal size. This makes it possible to use Yokadi inside Android terminal emulators like Termux
- Sometimes the task lock used to prevent editing the same task description from multiple Yokadi instances were not correctly released