@@ -3,6 +3,9 @@ v1.x.y unreleased
 - New features:
     - A new command has been added: `p_merge`, to merge a project into another.
     - It is now possible to turn a task into a note with `t_to_note` and a note into a task with `n_to_task`.
+- Misc:
+    - Added the `--datadir` option. It replaces the `--db` option, which is now deprecated and will be removed in the next version.
+    - Similarly, the `YOKADI_DB` environment variable is now deprecated.
 
 v1.1.1 2016/11/11
 
